frontend: Fix some split-view article list bugs.
* Fix issue where an article with a small amount of text causes the article list width to be too small
* Fix issue where an article content that is too wide causes wrapping and makes the article content disappear

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -255,11 +255,6 @@
   padding: 0;
 }
 
-.GoliathSplitViewArticleListBox.MuiBox-root {
-  height: 100vh;
-  overflow-y: auto;
-}
-
 .GoliathArticleListBase.MuiPaper-root {
   border: 1px solid transparent;
   /* Fixed size to optimize scrolling */
